<resources>
    <string name="app_name">云飞家居</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or parse this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_productlistactivity_list">Items</string>
    <string name="title_productlistactivity_detail">ProductListActivity Detail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_clear">清理缓存</string>
    <string name="product_list">产品列表</string>
    <string name="quotate_list">报价列表</string>
    <string name="order_list">订单列表</string>
    <string name="material_list">材料列表</string>
    <string name="work_report">生产流程报表</string>
    <string name="work_flow_list">生产流程管理</string>
    <string name="schedule">我的流程</string>
    <!--订单表结构-->
    <string-array name="table_head_order_item">
        <item>序号||itm||7||60</item>
        <item>图片||thumbnail||2||91||url</item>
        <!--2表示图片类型-->
        <item>产品名称||prd_name||1||91</item>
        <item>配方号||id_no||1||91</item>
        <item>客号||bat_no||1||91</item>
        <item>数量||qty||1||60</item>
        <item>单位||ut||1||60</item>
        <item>单价||up||1||60</item>
        <item>金额||amt||1||80</item>
        <item>箱数||htxs||1||40</item>
        <item>每箱数||so_zxs||1||40</item>
        <item>箱规||khxg||1||91</item>
        <item>立方数||xgtj||1||60</item>
        <item>总立方数||zxgtj||1||60</item>
        <item>产品尺寸||hpgg||1||120</item>
        <item>生产进度||currentWorkFlow||1||120</item>
    </string-array>


    <!--产品材料清单（白培 组装） 表格-->
    <string-array name="table_head_product_material_item">
        <item>序号||itemIndex||7||60</item>

        <!--2表示图片类型-->
        <item>材料编码||materialCode||1||91</item>
        <item>材料名称||materialName||1||91</item>
        <item>单位用量||quantity||1||60</item>
        <item>长||pLong||1||40</item>
        <item>宽||pWidth||1||40</item>
        <item>高||pHeight||1||40</item>
        <item>毛长||wLong||1||40</item>
        <item>毛宽||wWidth||1||40</item>
        <item>毛高||wHeight||1||40</item>
        <item>配额||quota||1||80</item>
        <item>单位||unitName||1||40</item>
        <item>利用率||available||1||60</item>
        <item>类型||type||1||40</item>
        <item>单价||price||1||60</item>
        <item>金额||amount||1||80</item>
        <item>分件备注||memo||6||120</item>
    </string-array>


    <!--产品材料清单（包装） 表格-->
    <string-array name="table_head_product_pack_material_item">
        <item>序号||itemIndex||7||60</item>

        <!-- 比白培组装 多三列 -->
        <item>材料类别||packMaterialClass||1||80</item>
        <item>材质||packMaterialType||1||60</item>
        <item>位置||packMaterialPosition||1||60</item>
        <!-- 比白培组装 多三列 -->


        <item>材料编码||materialCode||1||91</item>
        <item>材料名称||materialName||1||91</item>
        <item>单位用量||quantity||1||60</item>
        <item>长||pLong||1||40</item>
        <item>宽||pWidth||1||40</item>
        <item>高||pHeight||1||40</item>
        <item>毛长||wLong||1||40</item>
        <item>毛宽||wWidth||1||40</item>
        <item>毛高||wHeight||1||40</item>
        <item>配额||quota||1||80</item>
        <item>单位||unitName||1||40</item>
        <item>利用率||available||1||60</item>
        <item>类型||type||1||40</item>
        <item>单价||price||1||60</item>
        <item>金额||amount||1||80</item>
        <item>分件备注||memo||6||120</item>
    </string-array>


    <!--产品油漆清单 表格-->
    <string-array name="table_head_product_paint_item">
        <item>序号||itemIndex||7||60</item>

        <!--2表示图片类型-->
        <item>工序代码||processCode||1||80</item>
        <item>工序名称||processName||1||80</item>
        <item>工价||processPrice||1||60</item>
        <item>材料编码||materialCode||1||80</item>
        <item>材料名称||materialName||1||80</item>
        <item>配料比例||ingredientRatio||1||60</item>
        <item>单位||unitName||1||40</item>
        <item>用量||quantity||1||60</item>
        <item>物料单价||price||1||60</item>
        <item>物料费用||cost||1||60</item>
        <item>配料量||materialQuantity||1||60</item>
        <item>稀释剂||ingredientQuantity||1||60</item>
        <item>备注||memo||6||120</item>

    </string-array>

    <!--产品工资表 表格-->
    <string-array name="table_head_product_wage_item">
        <item>序号||itemIndex||7||60</item>

        <!--2表示图片类型-->
        <item>工序编码||processCode||1||100</item>
        <item>工序名称||processName||1||100</item>
        <item>工价||price||1||80</item>
        <item>金额||amount||1||80</item>
        <item>备注||memo||6||150</item>
    </string-array>

    <!--报价表 表格-->
    <string-array name="table_head_quotation_list">
        <item>报价日期||qDate||1||120</item>
        <item>报价单号||qNumber||1||100</item>
        <item>客户||customerName||1||100</item>
        <item>有效日期||vDate||1||120</item>
        <item>币别||currency||1||80</item>
        <item>业务员||salesman||1||100</item>
        <item>报价类型||quotationTypeName||1||100</item>
        <item>审核||isVerified||1||60</item>
        <item>备注||memo||6||200</item>
    </string-array>


    <!--咸康报价细项表 表格-->
    <string-array name="table_head_xkquotation_item">
        <item>序号||iIndex||7||40</item>

        <item>图片||thumbnail||2||91||photoUrl</item>
        <item>货号||productName||1||120</item>
        <item>配方号||pVersion||1||100</item>
        <item>*内盒*||inBoxCount||1||60</item>
        <item>*每箱数*||packQuantity||1||70</item>
        <item>客户箱规||packageSize||1||120</item>
        <item>单位||unit||1||40</item>
        <item>成本价||cost||1||50</item>
        <item>FOB||price||1||60</item>
        <item>立方数||volumeSize||1||60</item>
        <item>货品规格||spec||1||100</item>
        <item>净重||weight||1||60</item>
        <item>材质||constitute||1||120</item>
        <item>镜面尺寸||mirrorSize||1||80</item>
        <item>备注||memo||6||200</item>

        <!---->
        <item>图片||thumbnail2||2||91||photoUrl2</item>
        <item>配方号||pVersion2||1||100</item>
        <item>*内盒*||inBoxCount2||1||60</item>
        <item>*每箱数*||packQuantity2||1||70</item>
        <item>客户箱规||packageSize2||1||120</item>
        <item>单位||unit2||1||40</item>
        <item>成本价||cost2||1||50</item>
        <item>FOB||price2||1||60</item>
        <item>立方数||volumeSize2||1||60</item>
        <item>货品规格||spec2||1||100</item>
        <item>净重||weight2||1||60</item>
        <item>材质||constitute2||1||120</item>
        <item>镜面尺寸||mirrorSize2||1||80</item>
        <item>备注||memo2||6||200</item>
    </string-array>
    <!--普通报价细项表 表格-->
    <string-array name="table_head_quotation_item">
        <item>序号||iIndex||7||40</item>
        <item>图片||thumbnail||2||91||photoUrl</item>
        <item>货号||productName||1||120</item>
        <item>配方号||pVersion||1||100</item>

        <item>*内盒*||inBoxCount||1||60</item>
        <item>*每箱数*||packQuantity||1||70</item>
        <item>客户箱规||packageSize||1||120</item>
        <item>单位||unit||1||40</item>
        <item>成本价||cost||1||50</item>
        <item>FOB||price||1||60</item>
        <item>立方数||volumeSize||1||60</item>
        <item>货品规格||spec||1||100</item>
        <item>净重||weight||1||60</item>
        <item>材质||constitute||1||120</item>
        <item>镜面尺寸||mirrorSize||1||80</item>
        <item>备注||memo||6||200</item>
    </string-array>
    <string name="title_activity_picture_view">PictureViewActivity</string>
    <string name="title_activity_long_text">LongText</string>
    <string name="search">查询</string>
    <string name="download_in_progress">正在下载</string>
    <string name="download_end">下载完成</string>

    <!--材料细项表 表格-->
    <string-array name="table_head_material_item">
        <item>图片||thumbnail||2||91||url</item>
        <item>材料代码||code||1||120</item>
        <item>材料名称||name||1||100</item>
        <item>毛长||pVersion||1||120</item>
        <item>毛宽||inBoxCount||1||60</item>
        <item>毛高||packQuantity||1||60</item>
        <item>利用率||available||1||60</item>
        <item>损耗率||discount||1||60</item>
        <item>单价||price||1||60</item>
        <item>类型||typeName||1||60</item>
        <item>缓冲||classId||1||60</item>
        <item>规格||spec||1||120</item>
        <item>单位||unitName||1||60</item>
        <item>类别||className||1||60</item>
        <item>是否停用||outOfService||1||60</item>
        <item>备注||memo||6||200</item>
    </string-array>


    <!--材料细项表 表格-->
    <string-array name="table_head_product_process">

        <item>工序编码||code||1||120</item>
        <item>工序名称||code||1||120</item>
        <item>备注||name||6||200</item>
    </string-array>


    <!--订单进度表结构-->
    <string-array name="table_order_item_work_flow">
        <!-- <item_work_flow_report>序号||itm||1||40</item_work_flow_report>-->
        <item>图片||pictureUrl||2||91||url</item>
        <!--2表示图片类型-->

        <item>订单号||orderName||1||120</item>
        <item>产品名称||productFullName||1||120</item>
        <!-- <item_work_flow_report>客号||bat_no||1||91</item_work_flow_report>-->
        <item>订单数量||orderQty||1||60</item>
        <!--  <item_work_flow_report>单位||ut||1||60</item_work_flow_report> -->
        <!-- <item_work_flow_report>箱数||htxs||1||40</item_work_flow_report>-->

        <item>生产进度||workFlowName||1||120</item>
        <item>当前数量||qty||1||80</item>
        <!--<item_work_flow_report>出柜日期||sendDate||1||100</item_work_flow_report>-->


        <!--<item_work_flow_report>每箱数||so_zxs||1||40</item_work_flow_report>
        <item_work_flow_report>箱规||khxg||1||91</item_work_flow_report>
        <item_work_flow_report>立方数||xgtj||1||60</item_work_flow_report>
        <item_work_flow_report>总立方数||zxgtj||1||60</item_work_flow_report>-->
        <!-- <item_work_flow_report>产品尺寸||hpgg||1||120</item_work_flow_report>-->

    </string-array>
    <string name="title_activity_work_flow_message_receive">WorkFlowMessageReceiveActivity</string>
</resources>
