<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bg_selector"
            android:drawableRight="@drawable/icon_arrow_right" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:textSize="18sp"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="New Button"
            android:visibility="gone" />


        <Button
            android:id="@+id/act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="新界面"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/setUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="网络设置" />
</LinearLayout>
